--- a/verify.html
+++ b/verify.html
@@ -10,7 +10,7 @@
 <div class="container mt-5">
   <div class="card shadow p-4 text-center">
     <img src="logo.png" width="80" class="mb-3">
-    <h4>খানসামা কিন্ডারগার্টেন এসোসিয়েশন</h4>
+    <h4>খানসামা উপজেলা কিন্ডারগার্টেন এসোসিয়েশন</h4>
     <p class="text-success fw-bold">✅ OFFICIAL RESULT VERIFICATION</p>
 
     <div id="resultBox" class="mt-4"></div>
@@ -32,11 +32,11 @@
         <tr><th>Student Name</th><td>${student.name}</td></tr>
         <tr><th>Roll</th><td>${student.roll}</td></tr>
         <tr><th>School</th><td>${student.school}</td></tr>
-        <tr><th>Marks</th><td>${student.marks}</td></tr>
         <tr><th>Result</th><td>${student.scholarship}</td></tr>
         <tr><th>Class</th><td>${student.class}</td></tr>
       </table>
-      <span class="badge bg-success fs-6">VERIFIED</span>
+      <p class="text-success text-center "> Power by Tech Shine</p>
+      <span class="badge bg-success fs-6">VERIFIED</span> 
     `;
   } else {
     box.innerHTML = `<p class="text-danger fw-bold">❌ INVALID / NOT FOUND</p>`;
